Bug 1072137 part.1 Stop searching root editable node if a node has independent selection r=smaug